# piCalculator

./: .gitignore  CMakeLists.txt  README.md
include/: main.h
src/: main.cpp
